--- a/credits/styles.css
+++ b/credits/styles.css
@@ -128,6 +128,10 @@ main {
         display: none; /* Hide "Jelly's Space" on mobile */
     }
 
+    header {
+        padding: 15px 20px; /* Adjust the padding to ensure consistency */
+    }
+
     nav {
         display: flex;
         justify-content: center; /* Center the navigation bar */
@@ -169,3 +173,4 @@ main {
         padding: 15px;
     }
 }
+
