--- a/decors/styles.css
+++ b/decors/styles.css
@@ -15,7 +15,7 @@ body {
 
 header {
     background-color: #23272A;
-    padding: 20px 20px; /* Adjust the padding */
+    padding: 30px 20px;
     text-align: center;
     position: relative;
 }
